[package]
name = "pawprint"
version = "0.2.0"
description = "A simple web app for inspecting TLS / HTTP/2 fingerprints"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
keywords = ["tls", "http2", "h2", "ja3", "fingerprint"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/picoHz/pawprint"
homepage = "https://pawprint.dev"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
eth-blockies = "1.0.0"
hex = "0.4.3"
httlib-hpack = "0.1.3"
http = "0.2.8"
hyper = { version = "0.14.24", features = ["server", "http1", "http2", "tcp"] }
include_dir = "0.7.3"
md5 = "0.7.0"
pin-project-lite = "0.2.9"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
sailfish = "0.6.0"
serde = "1.0.152"
serde-querystring = "0.2.0"
serde_derive = "1.0.152"
serde_json = "1.0.93"
sha1_smol = { version = "1.0.0", features = ["std"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-rustls = "0.23.4"

[profile.release]
strip = true
